@@ -2,11 +2,9 @@ List of things to do in duff
 ============================
 
 Functionality
-* Change to getopt_long and add long options.
-* Implement i18n through gettext.
+* Change to getopt_long and add long options?
 * Detect duplicate file arguments?
 * Detect duplicate directory subtrees?
-* Switch from SHA1 to non-broken hash.
 
 Documentation
 * Add ALGORITHM section (or similar) to manpage.
@@ -14,7 +12,7 @@ Documentation
 
 Optimisation
 * Make directory cache less stupid and slow.
-* Do smart stuff to make things go faster.
 * Change linear lists into hash tables or trees?
 * Compare contents directly for clusters of two in excess mode?
+* Do smart stuff to make things go faster.
 
