@@ -26,6 +26,8 @@
 #include "config.h"
 #endif
 
+/* Macros to get 64-bit off_t
+ */
 #define _GNU_SOURCE 1
 #define _FILE_OFFSET_BITS 64
 
