@@ -26,6 +26,8 @@
 #include "config.h"
 #endif
 
+/* Macros to get 64-bit off_t
+ */
 #define _GNU_SOURCE 1
 #define _FILE_OFFSET_BITS 64
 
@@ -49,6 +51,10 @@
 #include <stdarg.h>
 #endif
 
+#if HAVE_STRING_H
+#include <string.h>
+#endif
+
 #if HAVE_CTYPE_H
 #include <ctype.h>
 #endif
@@ -63,32 +69,73 @@
 
 /* These flags are defined and documented in duff.c.
  */
+extern int null_terminate_flag;
 extern enum Function digest_function;
 
-static void print_message_digest(const uint8_t* digest)
+/* Reads a path name from stdin according to the specified flags.
+ */
+int read_path(FILE* stream, char* path, size_t size)
 {
-  int i, size;
+  int c, i = 0;
+  size_t length;
 
+  if (null_terminate_flag)
+  {
+    while (i < size)
+    {
+      if ((c = fgetc(stream)) == EOF)
+	return -1;
+
+      path[i++] = (char) c;
+      if (c == '\0')
+	break;
+    }
+  }
+  else
+  {
+    if (!fgets(path, size, stream))
+      return -1;
+
+    /* Kill newline terminator, if present */
+    length = strlen(path);
+    if ((length > 0) && (path[length - 1] == '\n'))
+      path[length - 1] = '\0';
+  }
+
+  return 0;
+}
+
+/* Kills trailing slashes in the specified path (except if it's /).
+ */
+void kill_trailing_slashes(char* path)
+{
+  char* temp;
+
+  while ((temp = strrchr(path, '/')))
+  {
+    if (temp == path || *(temp + 1) != '\0')
+      break;
+    *temp = '\0';
+  }
+}
+
+/*! Returns the size, in bytes, of the specified digest type.
+ */
+size_t get_digest_size(void)
+{
   switch (digest_function)
   {
     case SHA_1:
-      size = SHA1_HASH_SIZE;
-      break;
+      return SHA1_HASH_SIZE;
     case SHA_256:
-      size = SHA256_HASH_SIZE;
-      break;
+      return SHA256_HASH_SIZE;
     case SHA_384:
-      size = SHA384_HASH_SIZE;
-      break;
+      return SHA384_HASH_SIZE;
     case SHA_512:
-      size = SHA512_HASH_SIZE;
-      break;
+      return SHA512_HASH_SIZE;
     default:
-      error("This cannot happen");
+      error(gettext("This cannot happen"));
   }
-
-  for (i = 0;  i < size;  i++)
-    printf("%02x", digest[i]);
 }
 
 /* Prints a formatted message to stderr and exist with non-zero status.
@@ -126,35 +173,10 @@ void warning(const char* format, ...)
   free(message);
 }
 
-/* Returns a string representation of a fstat(2) file mode.
- */
-const char* get_mode_name(int mode)
-{
-  switch (mode)
-  {
-    case S_IFREG:
-      return "file";
-    case S_IFLNK:
-      return "symbolic link";
-    case S_IFIFO:
-      return "named pipe";
-    case S_IFCHR:
-      return "character device";
-    case S_IFDIR:
-      return "directory";
-    case S_IFBLK:
-      return "block device";
-    case S_IFSOCK:
-      return "socket";
-    default:
-      return "unknown";
-  }
-}
-
 /* Prints a duplicate cluster header to stdout.  Various escape
  * sequences in the format string are replaced with the provided values.
  * Note that this function does not terminate the output with any
- * special character.
+ * special character (i.e. newline or null).
  */
 void print_cluster_header(const char* format,
                           unsigned int count,
@@ -162,7 +184,7 @@ void print_cluster_header(const char* format,
 			  off_t size,
 			  const uint8_t* digest)
 {
-  int i;
+  int i, digest_size;
   const char* c;
 
   for (c = format;  *c != '\0';  c++)
@@ -173,7 +195,7 @@ void print_cluster_header(const char* format,
       switch (*c)
       {
 	case 's':
-	  printf("%lli", size);
+	  printf("%" PRIi64, size);
 	  break;
 	case 'i':
 	  printf("%u", index);
@@ -182,7 +204,10 @@ void print_cluster_header(const char* format,
 	  printf("%u", count);
 	  break;
 	case 'c':
-	  print_message_digest(digest);
+	case 'd':
+	  digest_size = get_digest_size();
+	  for (i = 0;  i < digest_size;  i++)
+	    printf("%02x", digest[i]);
 	  break;
 	case '%':
 	  putchar('%');
@@ -191,6 +216,10 @@ void print_cluster_header(const char* format,
 	  putchar('\n');
 	  return;
 	default:
+	  /* If the character following the '%' looks normal then we figure it
+	   * might be a good idea to silently prepend a '%' and pretend like we
+	   * didn't notice the broken format string.
+	   */
 	  if (isgraph(*c) || isspace(*c))
 	  {
 	    putchar('%');
